tests/snapshots/test_node_version_change_invalidates_npm_engine_cache.snap
---
source: crates/test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `22.x`
  - Resolved Node.js version: `22.23.3`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.23.3/node-v22.23.3-<arch>.tar.gz ... (<time_elapsed>)
  - Validating ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.23.3 (<arch>)`
  - Installing Node.js `22.23.3 (<arch>)` ... (<time_elapsed>)
- Determining npm package information
  - Found `engines.npm` version `11.x` declared in `package.json`
  - GET https://registry.npmjs.org/npm ... (<time_elapsed>)
  - Resolved npm version `11.x` to `<npm-11.x-version>`
- Installing npm
  - GET https://registry.npmjs.org/npm/-/npm-<npm-11.x-version>.tgz ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Successfully installed `npm@<npm-11.x-version>`
- Installing node modules
  - Using npm version `<npm-11.x-version>`
  - Creating npm cache
  - Configuring npm cache directory
  - Disabling npm audit and fund notices
  - Running `npm ci`


      added <NUMBER> packages in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `npm prune`


      up to date in <time_elapsed>

  - Done (<time_elapsed>)
- Configuring default processes
  - Skipping default web process (no start script defined)
- Removing non-deterministic build artifacts before export
  - Nothing to cleanup
- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs:available_parallelism'
Adding layer 'heroku/nodejs:dist'
Adding layer 'heroku/nodejs:npm_engine'
Adding layer 'heroku/nodejs:npm_runtime_config'
Adding layer 'heroku/nodejs:web_env'
Adding layer 'heroku/nodejs:z_node_module_bins'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:npm_cache'
Adding cache layer 'heroku/nodejs:npm_engine'
Adding cache layer 'heroku/nodejs:npm_packument'
Successfully built image '<image-name>'

--------------------------------------------- REBUILD ---------------------------------------------
===> ANALYZING
Restoring data for SBOM from previous image
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `22.x`
  - Resolved Node.js version: `22.23.3`
- Installing Node.js distribution
  - Reusing Node.js 22.23.3 (<arch>)
- Determining npm package information
  - Found `engines.npm` version `11.x` declared in `package.json`
  - GET https://registry.npmjs.org/npm ... (Not Modified)
  - Using cached packument for npm
  - Resolved npm version `11.x` to `<npm-11.x-version>`
- Installing npm
  - Using cached version of npm
  - Successfully installed `npm@<npm-11.x-version>`
- Installing node modules
  - Using npm version `<npm-11.x-version>`
  - Restoring npm cache
  - Configuring npm cache directory
  - Disabling npm audit and fund notices
  - Running `npm ci`


      added <NUMBER> packages in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - No build scripts found
- Pruning dev dependencies
  - Running `npm prune`


      up to date in <time_elapsed>

  - Done (<time_elapsed>)
- Configuring default processes
  - Skipping default web process (no start script defined)
- Removing non-deterministic build artifacts before export
  - Nothing to cleanup
- Done (finished in <time_elapsed>)
===> EXPORTING
Reusing layer 'heroku/nodejs:available_parallelism'
Reusing layer 'heroku/nodejs:dist'
Reusing layer 'heroku/nodejs:npm_engine'
Reusing layer 'heroku/nodejs:npm_runtime_config'
Reusing layer 'heroku/nodejs:web_env'
Reusing layer 'heroku/nodejs:z_node_module_bins'
Reusing layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Reusing layer 'buildpacksio/lifecycle:launcher'
Reusing layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Reusing cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:npm_cache'
Reusing cache layer 'heroku/nodejs:npm_engine'
Reusing cache layer 'heroku/nodejs:npm_packument'
Successfully built image '<image-name>'
