tests/snapshots/test_npm_build_scripts.snap
---
source: crates/test_support/src/lib.rs
---
===> ANALYZING
Image with name "<image-name>" not found
===> DETECTING
heroku/nodejs <buildpack-version>
===> RESTORING
<restoring-output>
===> BUILDING

## Heroku Node.js

- Checking Node.js version
  - Detected Node.js version range: `^22.0`
  - Resolved Node.js version: `22.23.3`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.23.3/node-v22.23.3-<arch>.tar.gz ... (<time_elapsed>)
  - Validating ... (<time_elapsed>)
  - Extracting ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.23.3 (<arch>)`
  - Installing Node.js `22.23.3 (<arch>)` ... (<time_elapsed>)
- Determining npm package information
  - No npm version requested
  - Using bundled npm version `10.9.9`
- Installing node modules
  - Using npm version `10.9.9`
  - Creating npm cache
  - Configuring npm cache directory
  - Disabling npm audit and fund notices
  - Running `npm ci`


      added <NUMBER> packages in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - Running `npm run heroku-prebuild`


      > npm-project@1.0.0 heroku-prebuild
      > echo 'executed heroku-prebuild'

      executed heroku-prebuild

  - Done (<time_elapsed>)
  - Running `npm run build`


      > npm-project@1.0.0 build
      > echo 'executed build'

      executed build

  - Done (<time_elapsed>)
  - Running `npm run heroku-postbuild`


      > npm-project@1.0.0 heroku-postbuild
      > echo 'executed heroku-postbuild'

      executed heroku-postbuild

  - Done (<time_elapsed>)
- Pruning dev dependencies
  - Running `npm prune`


      up to date in <time_elapsed>

  - Done (<time_elapsed>)
- Configuring default processes
  - Skipping default web process (no start script defined)
- Removing non-deterministic build artifacts before export
  - Nothing to cleanup
- Done (finished in <time_elapsed>)
===> EXPORTING
Adding layer 'heroku/nodejs:available_parallelism'
Adding layer 'heroku/nodejs:dist'
Adding layer 'heroku/nodejs:npm_runtime_config'
Adding layer 'heroku/nodejs:web_env'
Adding layer 'heroku/nodejs:z_node_module_bins'
Adding layer 'buildpacksio/lifecycle:launch.sbom'
Added 1/1 app layer(s)
Adding layer 'buildpacksio/lifecycle:launcher'
Adding layer 'buildpacksio/lifecycle:config'
Adding label 'io.buildpacks.lifecycle.metadata'
Adding label 'io.buildpacks.build.metadata'
Adding label 'io.buildpacks.project.metadata'
Adding label 'io.buildpacks.exec-env'
no default process type
Saving <image-name>...
*** Images (<random-hex>):
      <image-name>
Adding cache layer 'heroku/nodejs:dist'
Adding cache layer 'heroku/nodejs:npm_cache'
Successfully built image '<image-name>'
